--- a/index.html
+++ b/index.html
@@ -6,9 +6,106 @@
     <meta name="keywords" content="xxx,xxx">
     <meta name="description" content="xxx">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ebuild-cli 实例</title>
+    <title>canvas-render-html alpha版本演示</title>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+        }
+        *{
+            box-sizing: border-box;
+            font-family: Menlo, Monaco, "Courier New", monospace;
+        }
+        #container{
+            display: flex;
+            height: 100%;
+            box-sizing: border-box;
+        }
+        #code{
+            background-color: #444;
+            color: #fff;
+            padding: 10px;
+            font-size: 16px;
+            outline: none;
+            border: none;
+            box-sizing: border-box;
+            width: 100%;
+            height: 100%;
+            padding-top: 50px;
+        }
+        #canvasDiv{
+            flex: 1;
+            padding: 5px;
+        }
+        #canvas{
+
+        }
+        #codeDiv{
+            flex: 1;
+            position: relative;
+        }
+        #title{
+            background-color: #333;
+            color: #fff;
+            position: absolute;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+        }
+        #titleText{
+            margin-left: 10px;
+            font-weight: bold;
+        }
+        #title button{
+            height: 30px;
+            background-color: #fff;
+            outline: none;
+            border: none;
+            position: absolute;
+            right: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <script src="./public/index.min.js"></script>
+    <script src="./npm/canvas-render-html.min.js"></script>
+    <div id="container">
+        <div id="codeDiv">
+            <div id="title">
+                <span id="titleText">Canvas Render HTML(0.0.1-aplha)</span>
+                <button onclick="rendering()">Rendering</button>
+            </div>
+            <textarea id='code'></textarea>
+        </div>
+        <div id="canvasDiv">
+            <canvas id="canvas"></canvas>
+        </div>
+    </div>
+    <script>
+
+        var html = /* html*/`<div style='color:#222;font-size:20px'>
+  Canvas Render HTML(
+  <span style='color: #00e'>0.0.1-aplha</span>
+  )
+</div>
+<span style='color:#f44;font-size:16px'>
+  Hello World!
+</span>`
+            document.getElementById('code').value = html
+        document.body.style.height = window.innerHeight+'px';
+        
+        const body = RenderHTML({
+            html: html,
+            canvas: document.getElementById('canvas'),
+            width: window.innerWidth/2,
+            height: window.innerHeight
+        });
+
+        function rendering(){
+            const value = document.getElementById('code').value;
+            body.innerHTML = value;
+        }
+    </script>
 </body>
 </html>
