--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
     </style>
 </head>
 <body>
-    <script src="./npm/canvas-render-html.min.js"></script>
     <div id="container">
         <div id="codeDiv">
             <div id="title">
@@ -82,6 +81,8 @@
             <canvas id="canvas"></canvas>
         </div>
     </div>
+    <!-- <script src="./npm/canvas-render-html.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-render-html/canvas-render-html.min.js"></script>
     <script>
 
         var html = /* html*/`<div style='color:#222;font-size:20px'>
