--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div id="container">
         <div id="codeDiv">
             <div id="title">
-                <span id="titleText">Canvas Render HTML(0.0.1-aplha)</span>
-                <button onclick="rendering()">Rendering</button>
+                <span id="titleText">Canvas Render HTML(0.0.1)</span>
+                <button onclick="rendering()">Submit Render</button>
             </div>
             <div id='code'></div>
             <!-- <textarea></textarea> -->
@@ -85,7 +85,7 @@
 
         var html = /* html*/`<div style='color:#222;font-size:20px'>
   Canvas Render HTML(
-  <span style='color: #00e'>0.0.1-aplha</span>
+  <span style='color: #00e'>0.0.1</span>
   )
 </div>
 <span style='color:#f44;font-size:16px'>
